--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 /NT_lab1/ya.html
 /NT_analysis/datasets
 /NT_analysis/annotations/beer.csv
+/NT_analysis/env
+/NT_analysis/data/datasets/polar bear
