--- a/NT_analysis/requirements.txt
+++ b/NT_analysis/requirements.txt
@@ -1,7 +1,12 @@
 beautifulsoup4==4.12.3 
+lxml==5.3.0
 soupsieve==2.6
 requests==2.32.3
 opencv-python==4.10.0.84
 matplotlib==3.9.2
 fake-headers==1.0.2
 PySide6==6.7.3
+pandas==2.2.3
+
+#syntaxis anylysis code
+pylint==3.3.1
