--- a/NT_analysis/requirements.txt
+++ b/NT_analysis/requirements.txt
@@ -8,5 +8,6 @@ fake-headers==1.0.2
 PySide6==6.7.3
 pandas==2.2.3
 
-#syntaxis anylysis code
+#libraries for visual studio
 pylint==3.3.1
+pytest==8.3.3
